# oEmbedPy

./: .age.toml  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  CHANGES.rst  README.rst  Taskfile.yaml  aqua.yaml  lefthook.yml  mkdocs.yml  oembedpy.py  pyproject.toml  setup.cfg
.github/: release-body.md
.github/workflows/: main.yml  release.yml
demo/mkdocs/: config.yaml  index.md
docs/: .gitignore  Makefile  api.rst  changelogs.rst  commandline.rst  conf.py  index.rst  workspace.rst
docs/integrations/: mkdocs.rst  sphinx.rst
oembedpy/: __init__.py  application.py  cli.py  consumer.py  discovery.py  errors.py  provider.py  types.py
oembedpy/adapters/: mkdocs.py  sphinx.py
oembedpy/ext/: sphinx.py
tests/: conftest.py  test_adapter_sphinx.py  test_adapters_sphinx.py  test_application.py  test_consumer.py  test_discovery.py  test_ext_sphinx.py  test_it.py  test_provider.py
tests/roots/test-default/: conf.py  index.rst
tests/roots/test-for-sphinx-cached/: conf.py  index.rst
tests/roots/test-parallel/: index.rst  sub1.rst  sub2.rst  sub3.rst  sub4.rst  sub5.rst
tests/roots/test-with-fallback/: conf.py  index.rst
tests/test_adapters/: test_mkdocs.py  test_sphinx.py
