[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "oEmbedPy"
readme = "README.rst"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [{name = "Kazuya Takei", email = "myself@attakei.net"}]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Utilities",
]
dependencies = [
  "beautifulsoup4",
  "httpx",
  "lxml",
  "platformdirs",
]
dynamic = ["version", "description"]

[project.optional-dependencies]
cli = ["Click>=8"]
doc = [
  "furo",
  "Sphinx",
  "sphinx-toolbox",
  "rst-package-refs",
]
sphinx = [
  "sphinx",
]
test = [
  "sphinx[test]",
  "pytest==7.*",
  "pytest-cov==4.*",
  "pytest-httpx==0.21.*",
  "pytest-mock==3.14.*",
]

[project.scripts]
"oEmbed.py" = "oembedpy.cli:main"

[project.urls]
Home = "https://github.com/attakei-lab/oEmbedPy"

[tool.flit.module]
name = "oembedpy"

[tool.pytest.ini_options]
addopts = "--cov=oembedpy -m 'not webtest'"
markers = [
  "webtest: Marks to use real HTTP connection",

]
