[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "oEmbedPy"
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "Kazuya Takei", email = "myself@attakei.net"}]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Utilities",
]
dependencies = [
  "beautifulsoup4",
  "httpx",
  "lxml",
  "platformdirs",
]
dynamic = ["version", "description"]

[project.optional-dependencies]
cli = ["Click>=8"]

[project.scripts]
"oEmbed.py" = "oembedpy.cli:main"

[project.urls]
Home = "https://github.com/attakei/oEmbedPy"
Documentation = "https://oembedpy.readthedocs.io/en/v0.7.2/"

[tool.uv]
dev-dependencies = [
  "sphinx[test]",
  "furo",
  "sphinx-toolbox",
  "rst-package-refs",
  "pytest>=7",
  "pytest-cov>=4",
  "pytest-httpx>=0.21",
  "pytest-mock>=3.14",
  "mypy>=1.11.2",
]

[tool.flit.module]
name = "oembedpy"

[tool.pytest.ini_options]
addopts = "--cov=oembedpy -m 'not webtest'"
markers = [
  "webtest: Marks to use real HTTP connection",

]

[tool.mypy]
exclude = 'conf\.py$'

[[tool.mypy.overrides]]
module = ['bs4', 'docutils', 'docutils.*']
ignore_missing_imports = true
