[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "oEmbedPy"
version = "0.8.0"
description = "oEmbed client for Python."
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "Kazuya Takei", email = "myself@attakei.net"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Environment :: Console",
  "Framework :: Sphinx",
  "Framework :: Sphinx :: Extension",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Documentation :: Sphinx",
  "Topic :: Internet",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Utilities",
]
dependencies = [
  "beautifulsoup4",
  "httpx",
  "lxml",
  "platformdirs",
]

[project.optional-dependencies]
cli = ["Click>=8"]
mkdocs = [
    "mkdocs>=1.4",
]
sphinx = [
    "sphinx>=7",
]

[project.scripts]
"oEmbed.py" = "oembedpy.cli:main"

[project.urls]
Home = "https://github.com/attakei/oEmbedPy"
Documentation = "https://oembedpy.readthedocs.io/en/v0.8.0/"

[project.entry-points."mkdocs.plugins"]
oembedpy = "oembedpy.adapters.mkdocs:OembedPlugin"

[tool.uv]
dev-dependencies = [
  "sphinx[test]",
  "furo",
  "sphinx-toolbox",
  "rst-package-refs",
  "pytest>=7",
  "pytest-cov>=4",
  "pytest-httpx>=0.21",
  "pytest-mock>=3.14",
  "mypy>=1.11.2",
  "esbonio>=0.16.5",
  "lxml-stubs>=0.5.1",
  "types-markdown>=3.7.0.20241204",
]

[tool.flit.module]
name = "oembedpy"

[tool.pytest.ini_options]
addopts = "--cov=oembedpy -m 'not webtest'"
markers = [
  "webtest: Marks to use real HTTP connection",

]

[tool.mypy]
exclude = 'conf\.py$'

[[tool.mypy.overrides]]
module = ['bs4', 'docutils', 'docutils.*']
ignore_missing_imports = true
